Closed Bug 1941731 Opened 1 year ago Closed 1 year ago

Windows 11 Crash in [@ wgpu_core::storage::Storage<T>::get<T>]

Categories

(Core :: Graphics: WebGPU, defect, P1)

Unspecified
Windows 11
defect

Tracking

()

RESOLVED FIXED
136 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox134 --- unaffected
firefox135 --- unaffected
firefox136 + fixed

People

(Reporter: aryx, Assigned: nical)

References

(Regression)

Details

(Keywords: crash, regression, topcrash)

Crash Data

Attachments

(1 file)

77 GPU crashes from 56 installs, all on Windows 11. Nical is looking into this.

Crash report: https://crash-stats.mozilla.org/report/index/37f782ce-7f75-4a39-99cf-030fb0250115

MOZ_CRASH Reason:

Device[Id(0,1)] does not exist

Top 10 frames:

0  xul.dll  MOZ_Crash(char const*, int, char const*)  mfbt/Assertions.h:337
0  xul.dll  RustMozCrash(char const*, int, char const*)  mozglue/static/rust/wrappers.cpp:18
1  xul.dll  mozglue_static::panic_hook(std::panic::PanicHookInfo*)  mozglue/static/rust/lib.rs:102
2  xul.dll  core::ops::function::Fn::call<void (*)(ref$<std::panic::PanicHookInfo>), tupl...  /rustc/9fc6b43126469e3858e2fe86cafb4f0fd5068869/library/core/src/ops/function.rs:166
3  xul.dll  alloc::boxed::impl$30::call()  /rustc/9fc6b43126469e3858e2fe86cafb4f0fd5068869/library/alloc/src/boxed.rs:1986
3  xul.dll  std::panicking::rust_panic_with_hook()  /rustc/9fc6b43126469e3858e2fe86cafb4f0fd5068869/library/std/src/panicking.rs:809
4  xul.dll  std::panicking::begin_panic_handler::closure$0()  /rustc/9fc6b43126469e3858e2fe86cafb4f0fd5068869/library/std/src/panicking.rs:674
5  xul.dll  std::sys::backtrace::__rust_end_short_backtrace<std::panicking::begin_panic_h...  /rustc/9fc6b43126469e3858e2fe86cafb4f0fd5068869/library/std/src/sys/backtrace.rs:170
6  xul.dll  std::panicking::begin_panic_handler()  /rustc/9fc6b43126469e3858e2fe86cafb4f0fd5068869/library/std/src/panicking.rs:665
7  xul.dll  core::panicking::panic_fmt()  /rustc/9fc6b43126469e3858e2fe86cafb4f0fd5068869/library/core/src/panicking.rs:76

:nical, since you are the author of the regressor, bug 1940700, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Flags: needinfo?(nical.bugzilla)

The bug is marked as tracked for firefox136 (nightly). However, the bug still isn't assigned.

:bhood, could you please find an assignee for this tracked bug? Given that it is a regression and we know the cause, we could also simply backout the regressor. If you disagree with the tracking decision, please talk with the release managers.

For more information, please visit BugBot documentation.

Flags: needinfo?(bhood)
Duplicate of this bug: 1941712
Assignee: nobody → egubler
Severity: -- → S3
Status: NEW → ASSIGNED
Priority: -- → P1

Feel free to investigate without me, :nical, though I plan on putting time into this as a high priority for WebGPU.

Flags: needinfo?(bhood)

A common pattern in WebGPUParent.cpp is to early return if ForwardError returns true which happens when it enconters an error other than DeviceLost. Teo suggested that DeviceLost should also cause the early-return which makes sense as far as I can tell so this patch implements the suggestion. As a result, a DeviceLost error while atempting a device will prevent us from continuing to run code that assumes the device has been successfully inserted in the registry.

In addition, some unnecessary code in RcvAdapterRequestDevice was removed. LoseDevice isn't needed since we haven't created the device in the first place, and the assertion was redundant with the code in ForwardError.

The bug is linked to a topcrash signature, which matches the following criterion:

  • Top 10 desktop browser crashes on nightly

:ErichDonGubler, could you consider increasing the severity of this top-crash bug?

For more information, please visit BugBot documentation.

Flags: needinfo?(egubler)
Keywords: topcrash
Assignee: egubler → nical.bugzilla
Flags: needinfo?(egubler)
Pushed by nsilva@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6b28ddc86237 Bail out on the parent side if ForwardError finds a DeviceLost error. r=webgpu-reviewers,ErichDonGubler
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 136 Branch
Flags: needinfo?(nical.bugzilla)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: